deployment-pv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pv-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pv-test
  template:
    metadata:
      labels:
        app: pv-test
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80

          volumeMounts:
            - name: my-storage
              mountPath: /data

            - name: web-index
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html

      volumes:
        - name: my-storage
          persistentVolumeClaim:
            claimName: my-pvc

        - name: web-index-html
          configMap:
            name: web-index-html
