dev-deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment2
  labels:
    app: my-app2
    type: frontend2
  namespace: dev
spec:
  template:
    metadata:
      labels:
        app: my-app2
        type: frontend2
    spec:
      containers:
        - name: my-container
          image: httpd
          ports:
            - containerPort: 80
          volumeMounts:
            - name: secret-volume
              mountPath: /etc/secret
              readOnly: true
            # - name: web-index-html
            #   mountPath: /usr/share/nginx/html/index.html
            #   subPath: index.html
      volumes:
        - name: secret-volume
          secret:
            secretName: my-secret
        # - name: web-index-html
        #   configMap:
        #     name: web-index-html
  replicas: 3
  selector:
    matchLabels:
      app: my-app2
      type: frontend2
