dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    app: my-app
    type: frontend
  namespace: dev
spec:
  selector:
    app: my-app
    type: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  
  type: LoadBalancer
