dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: myservice.local
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 80
          - path: /contact
            pathType: Prefix
            backend:
              service:
                name: my-service2
                port:
                  number: 80
